# proyecto-arquitectura

./: MONO  image−aos.cpp  image−soa.cpp  main.cpp
PracticaArqui/: CMakeLists.txt  image−soa.cpp
SOA/: AOS
soa/: imagesoa.cpp  imagesoa.hpp
